add sign up and login buttons to customer sign up and stylist sign up web-pages

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <iframe width="560" height="315" src="" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <h1>MAPAMBO</h1>
-        <h3>Beyond The Standard</h3>
+        <h3>Beyond The Standard</h</html>3>
         <p>1) <br>
             <br>2) <br>
             <br>3) <br>
@@ -76,7 +76,7 @@
                 <address>
                     For Queries email: +254792627573<br><br>
                     www.waynejulius10@gmail.com:
-                    <img src="https://i.pinimg.com/564x/f7/62/f7/f762f74982a50e245dad0ee5c58c3251.jpg" style=width="80"
+                    <img src="https://i.pinimg.com/564x/f7/62/f7/f762f74982a50e245dad0ee5c58c3251.jpg" width="80"
                         height="40">
                     <p></p>
                     <a href="https://www.facebook.com/"
