--- a/stylistsignup.html
+++ b/stylistsignup.html
@@ -8,6 +8,8 @@
     <title>Mapambo</title>
     <!-- bootstrap css-->
     <link rel="stylesheet" href="css/bootstrap.css">
+    <!-- //signup css -->
+    <link rel="stylesheet" href="signup.css">
     <!-- main css-->
     <link rel="stylesheet" href="css/styles.css">
     <!-- font awesome js-->
@@ -18,7 +20,7 @@
     <link rel="stylesheet" href="magnific pop up/magnific-popup.css">
 </head>
 <body>
-
+    <div class="container">
     <div class="sign-up-form">
         <h1>STYLIST SIGN UP PORTAL</h1>
         <h2>Sign Up Now</h2>
@@ -41,6 +43,7 @@
             <button type="button" class="signup-btn"><a href="Login.html">Login</a></button>
      </form>
     </div>
+</div>
 
     
 </body>
