Changed the format of the card

--- a/dashboard.html
+++ b/dashboard.html
@@ -4,59 +4,69 @@
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="css/stylist.css" rel="stylesheet" type="text/css">
+    <link href="css/dashboard.css" rel="stylesheet" type="text/css">
     <script src="https://code.jquery.com/jquery-3.4.1.js"
         integrity="sha384-mlceH9HlqLp7GMKHrj5Ara1+LvdTZVMx4S1U43/NxCvAkzIo8WJ0FE7duLel3wVo"
         crossorigin="anonymous"></script>
     <script src="js/dashboard.js"></script>
     <title>Stylist Info</title>
-    <div class="social-media-icons">
+    <!-- <div class="social-media-icons">
         <a href="http://www.facebook.com/" class="fa fa-facebook"></a>
         <a href="https://twitter.com/login?lang=en" class="fa fa-twitter"></a>
         <a href="https://ke.linkedin.com/" class="fa fa-linkedin"></a>
         <a href="https://www.instagram.com/accounts/login/?hl=en" class="fa fa-instagram"></a>
-        <a href="https://www.pinterest.com/" class="fa fa-pinterest"></a>
+        <a href="https://www.pinterest.com/" class="fa fa-pinterest"></a> -->
     </div>
 </head>
 
 <body>
     <center>
         <div class="stylist-profile">
-            <h1>Stylist Profile</h1>
+            <h1>Mapambo🛠</h1>
         </div>
-        <form action="/action_page.php">
+
+        <!-- <form action="/action_page.php">
             <input type="file" name="pic" accept="image/*">
             <input type="submit">
-        </form>
-        <div class ="card">
-        <div novalidate>
-            <div class="row">
-                <div class="col-md-6">
-                    <h2>Stylist Details</h2>
-                    <div class="col-md-12">
-                        <label for="names">
-                            <b>
-                                <h8>User Name</h8>
-                            </b></label><br>
-                        <input type="text" placeholder="Enter User Name" name="user_name" required><br><br>
-                        <label for="street-address">
-                            <b>
-                                <h8>Address</h8>
-                            </b></label><br>
-                        <input type="text" placeholder="P.O box, code" name="address" required><br><br>
-                        <label for="years"><b>
-                                <h8>Years of Experinece</h8>
-                            </b></label><br>
-                        <input type="text" placeholder="Years" name="years" required><br><br>
-                        </div>    
+        </form> -->
+        <div class="card">
+            <img src="images/stlist1.jpg" alt="stylist" style="width:100%">
+            <div novalidate>
+                <div class="row">
+                    <div class="col-md-6">
+                        <h2>Stylist Profile</h2>
+                        <h3>Details</h3>
+                        <div class="col-md-12">
+                            <label for="names">
+                                <b>
+                                    <h8>User Name</h8>
+                                </b></label><br>
+                            <input type="text" placeholder="Enter User Name" name="user_name" required><br><br>
+                            <label for="street-address">
+                                <b>
+                                    <h8>Address</h8>
+                                </b></label><br>
+                            <input type="text" placeholder="P.O box, code" name="address" required><br><br>
+                            <label for="years"><b>
+                                    <h8>Years of Experinece</h8>
+                                </b></label><br>
+                            <input type="text" placeholder="Years" name="years" required><br><br>
+                        </div>
+                        <div class="social-media-icons">
+                            <a href="http://www.facebook.com/" class="fa fa-facebook"></a>
+                            <a href="https://twitter.com/login?lang=en" class="fa fa-twitter"></a>
+                            <a href="https://ke.linkedin.com/" class="fa fa-linkedin"></a>
+                            <a href="https://www.instagram.com/accounts/login/?hl=en" class="fa fa-instagram"></a>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
         </div>
+        <div class="textarea">
+            <label>Qualifications</label><br>
+            <textarea rows="5" cols="55" placeholder="Stylist Qualifications"></textarea>
         </div>
-        <div class ="textarea">
-                <label>Qualifications</label><br>
-                <textarea rows="5" cols="80" placeholder="Stylist Qualifications"></textarea>
-        </div>
-        </div>
-    </div>
 </body>
 </center>
 
