add header in about-us.html

--- a/contacts.html
+++ b/contacts.html
@@ -39,7 +39,7 @@
           <p>We get feedback here!!!</p>
         <div class="cont">
 
-          <form id = "query" method ="post" action="https://formspree.io/kashwheelsauto2018@gmail.com">
+          <form id = "query" method ="post" action="https://formspree.io/waynejulius10@gmail.com">
 
             <label for="fname">First Name</label>
             <input type="text" id="fname" name="firstname" placeholder="Your name..">
@@ -76,7 +76,7 @@
                     <img src="https://i.pinimg.com/564x/f7/62/f7/f762f74982a50e245dad0ee5c58c3251.jpg"
                         width="80" height="40">
                         <p></p>
-                    <a href="https://www.facebook.com/Kash-Wheels-350137285763791/?modal=admin_todo_tou" target='_self'>Facebook<img
+                    <a href="https://www.facebook.com" target='_self'>Facebook<img
                             src="https://image.flaticon.com/icons/svg/124/124010.svg"
                             width="80" height="40"></a>
                     <br>
@@ -85,7 +85,7 @@
                              width="80" height="40"></a>
                     <br>
                     <p></p>
-                    <a href="https://twitter.com/kashwheelsau1" target="_self">Twitter<img src="https://image.flaticon.com/icons/svg/23/23931.svg"
+                    <a href="https://twitter.com/" target="_self">Twitter<img src="https://image.flaticon.com/icons/svg/23/23931.svg"
                              width="80" height="40"></a>
                 </address>
             </div>
