--- a/about-us.html
+++ b/about-us.html
@@ -29,8 +29,8 @@
                 </form>
             </div>
             <div class="info">
-                <h2></h2>
-                <h3></h3>
+                <h2>WHO WE ARE</h2>
+                <h3>Brief Description</h3>
                 <div id="para1">
                     <p></p>
                     <p></p>
@@ -65,7 +65,7 @@
             <img src="https://i.pinimg.com/564x/f7/62/f7/f762f74982a50e245dad0ee5c58c3251.jpg" width="80"
                 height="40">
             <p></p>
-            <a href="https://www.facebook.com/kash-Wheels-350137285763791/?modal=admin_todo_tou"
+            <a href="https://www.facebook.com/-350137285763791/?modal=admin_todo_tou"
                 target='_self'>Facebook<img src="https://image.flaticon.com/icons/svg/124/124010.svg" width="80"
                     height="40"></a>
             <br>
