--- a/news.html
+++ b/news.html
@@ -39,8 +39,9 @@
 
 		<div class="container-fluid text-center bg-grey">
 
-			<h2>LATEST CAR NEWS</h2><br>
-			<iframe width="100%" height="315" src="" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<h2></h2><br>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/Ak1JrGKnRoY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/v7dmmlr9jO8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			<h2>Hair styling</h2>
 			<div class="row text-center">
 				<div class="col-sm-6">
