add paragraphs in about-us.html

--- a/about-us.html
+++ b/about-us.html
@@ -32,21 +32,12 @@
                 <h2>WHO WE ARE</h2>
                 <h3>Brief Description</h3>
                 <div id="para1">
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <ol>
-
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                    </ol>
+                    <p> The <em>Mapambo company</em> was established in 2019 after it became clear that, due to the mass closing of hair stylist shops in Nairobi, many clients were experiencing challenges finding competent, experienced and trustworthy hair stylists. </p>
+                    <br>
+                    <p>We aim to be a practical online based solutions provider by connecting these clients with the <strong>best</strong> hair stylists and beauticians in town.</p>
+                    <br>
+                    <p>Be part of this revolution! <strong>Join us today!</strong></p>
+                    
                     <h3></h3>
                     <p></p>
                     <p></p>
