add other paragraphs in about-us.html

--- a/index.html
+++ b/index.html
@@ -111,11 +111,10 @@
         </div>
         <h1>MAPAMBO</h1>
         <h3>Beyond The Standard</h3>
-        <p>1) <br>
-            <br>2) <br>
-            <br>3) <br>
-
-            <br>4) </p>
+        <p>FREE TO USE!</p> <br>
+        <p>EASY TO ACCESS!</p><br>
+        <p>PROFESSIONAL STYLISTS</p><br>
+        
         <h3>
             <p><a href="./services.html"> Our Services</a>
         </h3>
