Generate the basic HTML layout and structure of Mapambo's services.html page and prepared the script for the cards section that will host the featured stylists

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <address>
                     For Queries email: +254792627573<br><br>
                     www.waynejulius10@gmail.com:
-                    <img src="https://i.pinimg.com/564x/f7/62/f7/f762f74982a50e245dad0ee5c58c3251.jpg" style=width="80"
+                    <img src="https://i.pinimg.com/564x/f7/62/f7/f762f74982a50e245dad0ee5c58c3251.jpg" width="80"
                         height="40">
                     <p></p>
                     <a href="https://www.facebook.com/"
