add images in to our services section in about-us.html

--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
         <h3>
             <p><a href="./services.html"> Our Services</a>
         </h3>
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
+        <img src="/images/d80b5cdc2fa2ca8917a77dd950e252ce.jpg" alt="">
+        <img src="/images/d4df126b1372ad0bae066e9d895e3035.jpg" alt="">
+        <img src="/images/ec8891a207ec6ccc6d8faec842b6c056.jpg" alt="">
         <br>
         <p><a href="./services.html"> CLICK HERE !!</a>
 
