add headers in services.html

--- a/services.html
+++ b/services.html
@@ -35,7 +35,7 @@
 
 
 
-        <h3>HAIR STYLING</h3>
+        <h3>Communication services</h3>
         <ul>
             <li></li>
 
@@ -48,7 +48,7 @@
             <img src=""
                 style="border:5px solid black" width="300" height="200">
         </ul>
-        <h3>... SERVICES</h3>
+        <h3>Checkout systems</h3>
         <ul>
             <li></li>
             <li></li>
@@ -61,7 +61,7 @@
             <img src="" style="border:5px solid black"
                 width="300" height="200">
         </ul>
-        <h3>...Services</h3>
+        <h3>Ease of use.Enable stylists to sell their services.</h3>
         <ul>
             <li></li>
             <li></li>
@@ -69,12 +69,12 @@
             <img src="" style="border:5px solid black"
                 width="300" height="200">
         </ul>
-        <h3></h3>
+        <h3>Booking options.</h3>
         <ul>
             <li></li>
             <img src="" style="border:5px solid black"
                 width="300" height="200">
-            <li>BRAIDS</li>
+            <li></li>
             <img src="" style="border:5px solid black"
                 width="300" height="200">
             <li></li>
@@ -84,14 +84,21 @@
             <img src="" style="border:5px solid black"
                 width="300" height="200">
         </ul>
-        <h3></h3>
+        <h3>Cost</h3>
         <ul>
             <li></li>
             <img src=">
             <li></li>
             <img src=">
         </ul>
-        <h3></h3>
+        <h3>Payment Gateways</h3>
+        <ul>
+            <li></li>
+            <img src=">
+            <li></li>
+            <img src=">
+        </ul>
+        <h3>Queries</h3>
         <p></p>
     <div class="footer">
                 <address>
