add images in services.html

--- a/services.html
+++ b/services.html
@@ -43,9 +43,9 @@
             <li></li>
             <li></li>
             <li></li>
-            <img src="" style="border:5px solid black"
+            <img src="/images/COMMUNICATION.jpeg" style="border:5px solid black"
                 width="300" height="200">
-            <img src=""
+            <img src="/images/comm2.png"
                 style="border:5px solid black" width="300" height="200">
         </ul>
         <h3>Checkout systems</h3>
@@ -54,11 +54,11 @@
             <li></li>
             <li></li>
             <li></li>
-            <img src="" style="border:5px solid black"
+            <img src="/images/online4.jpeg" style="border:5px solid black"
                 width="300" height="200">
-            <img src="" style="border:5px solid black"
+            <img src="/images/online3.jpeg" style="border:5px solid black"
                 width="300" height="200">
-            <img src="" style="border:5px solid black"
+            <img src="/images/online2.jpeg" style="border:5px solid black"
                 width="300" height="200">
         </ul>
         <h3>Ease of use.Enable stylists to sell their services.</h3>
@@ -66,19 +66,19 @@
             <li></li>
             <li></li>
             <li></li>
-            <img src="" style="border:5px solid black"
+            <img src="/images/website-designing-for-fashion-industry.jpg" style="border:5px solid black"
                 width="300" height="200">
         </ul>
         <h3>Booking options.</h3>
         <ul>
             <li></li>
-            <img src="" style="border:5px solid black"
+            <img src="/images/booking1.jpeg" style="border:5px solid black"
                 width="300" height="200">
             <li></li>
-            <img src="" style="border:5px solid black"
+            <img src="/images/booking2.jpg" style="border:5px solid black"
                 width="300" height="200">
             <li></li>
-            <img src="" style="border:5px solid black"
+            <img src="/images/bookings-services.png" style="border:5px solid black"
                 width="300" height="200">
             <li></li>
             <img src="" style="border:5px solid black"
@@ -86,17 +86,15 @@
         </ul>
         <h3>Cost</h3>
         <ul>
+            <li>Very economic friendly for all kinds of classes.</li>
+            <img src="images/calc cost.jpeg">
             <li></li>
-            <img src=">
-            <li></li>
-            <img src=">
+            <img src="images/cost2.jpeg">
         </ul>
         <h3>Payment Gateways</h3>
         <ul>
-            <li></li>
-            <img src=">
-            <li></li>
-            <img src=">
+            <li>mpesa,airtel-money,paypal,telkom kash etc</li>
+            <img src="images/payment.jpeg">
         </ul>
         <h3>Queries</h3>
         <p></p>
