add images in news.html

--- a/news.html
+++ b/news.html
@@ -46,7 +46,7 @@
 			<div class="row text-center">
 				<div class="col-sm-6">
 					<div class="thumbnail">
-						<img src="" alt="Kenya" width="400" height="300">
+						<img src="/images/1335d121a7643ae53ee7a1ff664783f2.jpg" alt="Kenya" width="400" height="300">
 						<p><strong></strong></p>
 						<p></p>
 
@@ -55,16 +55,13 @@
 
 				<div class="col-sm-6">
 					<div class="thumbnail">
-						<img src="" alt="Kenya" width="400" height="150">
+						<img src="/images/59838e2385a70e2390c7ce0bbb0536db.jpg" alt="Kenya" width="400" height="150">
 						<p><strong></strong></p>
 						<p><tr>
 
 								<li> </li>
 								<li> </li>
-								<li> </li>
-								<li> </li>
-								<li></li>
-								<li></li>
+								
 
 						</p>
 						</tr>
@@ -73,23 +70,20 @@
 
 				<div class="col-sm-4">
 					<div class="thumbnail">
-						<img src="" alt="Kenya" width="300" height="150">
+						<img src="/images/9d9f662921e4c4251714d91c0927a7af.jpg" alt="Kenya" width="300" height="150">
 						<p><strong>KENYA</strong></p>
 						<tr>
 							<p>
 								<li></li>
 								<li></li>
-								<li></li>
-								<li></li>
-								<li></li>
-								<li></li>
+								
 							</p>
 						</tr>
 					</div>
 				</div>
 				<div class="col-sm-4">
 					<div class="thumbnail">
-						<img src="" alt="Kenya" width="200" height="150">
+						<img src="/images/news2.jpeg" alt="Kenya" width="200" height="150">
 						<p><strong></strong></p>
 						<p>
 							<p></p>
@@ -100,7 +94,7 @@
 				</div>
 				<div class="col-sm-4">
 					<div class="thumbnail">
-						<img src="" alt="Kenya" width="400" height="300">
+						<img src="/images/news1.jpeg" alt="Kenya" width="400" height="300">
 						<p><strong>KENYA</strong></p>
 						<p></p>
 
@@ -113,21 +107,21 @@
 		</div>
 		<div class="col-sm-4">
 			<div class="thumbnail">
-				<img src="" alt="Kenya" width="400" height="300">
+				<img src="/images/news4.jpeg" alt="Kenya" width="400" height="300">
 				<p><strong>KENYA</strong></p>
 				<p></p>
 			</div>
 		</div>
 		<div class="col-sm-4">
 			<div class="thumbnail">
-				<img src="" alt="Kenya" width="350" height="300">
+				<img src="/images/news5.jpeg" alt="Kenya" width="350" height="300">
 				<p><strong>KENYA</strong></p>
 				<p></p>
 			</div>
 		</div>
 		<div class="col-sm-4">
 			<div class="thumbnail">
-				<img src="" alt="Kenya" width="400" height="300">
+				<img src="/images/kenyan-womens-hairstyle.jpg" alt="Kenya" width="400" height="300">
 				<p><strong>KENYA</strong></p>
 				<p></p>
 			</div>
