--- a/stylistsignup.html
+++ b/stylistsignup.html
@@ -9,7 +9,7 @@
     <!-- bootstrap css-->
     <link rel="stylesheet" href="css/bootstrap.css">
     <!-- //signup css -->
-    <link rel="stylesheet" href="signup.css">
+    <link rel="stylesheet" href="css/signup.css">
     <!-- main css-->
     <link rel="stylesheet" href="css/styles.css">
     <!-- font awesome js-->
@@ -19,32 +19,47 @@
     <!-- magnific pop up-->
     <link rel="stylesheet" href="magnific pop up/magnific-popup.css">
 </head>
+
 <body>
+    <div class='bold-line'></div>
     <div class="container">
-    <div class="sign-up-form">
-        <h1>STYLIST SIGN UP PORTAL</h1>
-        <h2>Sign Up Now</h2>
-        <form>
-            <input id="stylistfirstname" type="text" class="input-box" placeholder="Your first name">
-            <input id="stylistlastname" type="text" class="input-box" placeholder="Your last name">
-            <input id="stylistphonenumber" type="text" class="input-box" placeholder="Your phone number">
-            <input id="stylistemail" type="email" class="input-box" placeholder="Your Email">
-            <input type="password" class="input-box" placeholder="Your Password">
-            <input type="radio" name="gender" value="male" checked>Male<br>
-            <input type="radio" name="gender" value="female">Female<br>
-            <input type="radio" name="gender" value="other">Other<br>
-            <p><span><input type="checkbox"></span>I agree to the terms of 
-            services</p>
-            <button type="button" class="signup-btn" >Sign up</button>
-            <p>Not a <strong>stylist?</strong> Access the client <em>sign up</em> <a href="customersignup.html"><strong>here</strong></a></p>
-            <hr>
-            <p class="or">OR</p>
-            <p>Do you have an account?</p>
-            <button type="button" class="signup-btn"><a href="Login.html">Login</a></button>
-     </form>
-    </div>
-</div>
+        <div class='window'>
+            <div class='overlay'></div>
+            <div class='content'>
+                <div class="content">
+                    <div class='welcome'>Mapambo🛠</div>
+                    <div class='subtitle'><strong>"service before self"</strong></div>
+                    <div class="sign-up-form">
+                        <h1>STYLIST SIGN UP PORTAL</h1>
+                        <h2>Sign Up Now</h2>
+                        <form class="input">
+                            <div class="input-fields">
+                                <input id="stylistfirstname" type="text" class="input-box"
+                                    placeholder="Your first name"><br>
+                                <input id="stylistlastname" type="text" class="input-box" placeholder="Your last name"><br>
+                                <input id="stylistphonenumber" type="text" class="input-box"
+                                    placeholder="Your phone number"><br>
+                                <input id="stylistemail" type="email" class="input-box" placeholder="Your Email"><br>
+                                <input type="password" class="input-box" placeholder="Your Password"><br>
+                                <input type="radio" name="gender" value="male" checked>Male<br>
+                                <input type="radio" name="gender" value="female">Female<br>
+                                <input type="radio" name="gender" value="other">Other<br>
+                                <p><span><input type="checkbox"></span>I agree to the terms of
+                                    services</p>
+                                <button type="button" class="signup-btn">Sign up</button>
+                                
+                                <p>Not a <strong>stylist?</strong> Access the client <em>sign up</em> <a
+                                        href="customersignup.html"><strong>here</strong></a></p>
+                                <hr>
+                                <p class="or">OR</p>
+                                <p>Do you have an account?</p>
+                                <button type="button" class="signup-btn"><a href="Login.html">Login</a></button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-    
+
 </body>
-
