--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
 
     <div class="container">
         <div class="logotop">
-
+            <center>
+            <h1>Mapambo</h1>
+            </center>
             <div id="myCarousel" class="carousel slide" data-ride="carousel">
                 <!-- Indicators -->
                 <ol class="carousel-indicators">
@@ -90,19 +92,7 @@
                     </a>
                 </div>
             </div>
-            <h1>MAPAMBO</h1>
-            
-        <div class="navbar">
-
-            <div class="search-container">
-                <a class="active" href="index.html" target="_self"><i class="fa fa-fw fa-home"></i>Home</a>
-                <a class="active" href="./about-us.html" target="_self"><i class="fa fa-fw fa-key"></i>About Us</a>
-                <a class="active" href="./contacts.html" target="_self"><i class="fa fa-fw fa-envelope"></i>Contacts</a>
-                <a class="active" href="./news.html" target="_self"><i class="fa fa-fw fa-globe"></i>News</a>
-                <a class="active" href="./services.html" target="_self"><i class="fa fa-fw fa-wrench"></i>Services</a>
-                <form action="/action_page.php">
-                    <input type="text" placeholder="Search.." name="search">
-                    <button type="submit"><i class="fa fa-search"></i></button>
+           
                 </form>
             </div><br>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/ci850CpV9H8" frameborder="0"
