add lists to communication services in services.html

--- a/services.html
+++ b/services.html
@@ -45,10 +45,8 @@
         </ul>
         <h3>Checkout systems</h3>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Mapambo app</li>
+            <li>Mapambo website</li>
             <img src="/images/online4.jpeg" style="border:5px solid black" width="300" height="200">
             <img src="/images/online3.jpeg" style="border:5px solid black" width="300" height="200">
             <img src="/images/online2.jpeg" style="border:5px solid black" width="300" height="200">
