add list to header3 in services.html

--- a/services.html
+++ b/services.html
@@ -53,9 +53,7 @@
         </ul>
         <h3>Ease of use.Enable stylists to sell their services.</h3>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>upload their amazing styles.</li>
             <img src="/images/website-designing-for-fashion-industry.jpg" style="border:5px solid black" width="300"
                 height="200">
         </ul>
