--- a/dashboard.html
+++ b/dashboard.html
@@ -13,15 +13,17 @@
     </div>
 </head>
 
-<body onload='document.form1.text1.focus()'>
+<body>
     <center>
-         <div class ="mySection">
-        <div class="card">
-            <card header>
+        <div class="mySection">
+            <div class="card">
+                <card header>
                     <h1>Mapambo🛠</h1>
-            </card>
-            <h2>Stylist Profile</h2>
-            <img src="images/stlist1.jpg" alt="stylist" style="width:100%">
+                </card>
+                <div class="subtitle"><strong>Stylist Profile</strong></div>
+                <form class="input">
+                    <div class="input-fields">
+                            <img src="images/stlist1.jpg" alt="stylist" style="width:100%">
             <div novalidate>
                 <div class="row">
                     <div class="col-md-6">
@@ -31,29 +33,19 @@
                                 <b>
                                     <h8>First Name</h8>
                                 </b></label><br>
-                            <input type="text" placeholder="First Name" name="user_name" id="txt1" required><br><br>
+                            <input type="text" placeholder="First Name" class="user_name" id='fname' required></input><br><br>
                             <label for="text"><b>
                                     <h8>Last Name</h8>
                                 </b></label><br>
-                            <input type="text" placeholder="Last Name" name="name" id="txt2" required><br><br>
-                            <label for="street-address">
-                                <b>
-                                    <!-- <h8>Address</h8>
-                                </b></label><br>
-                            <input type="text" placeholder="P.O box, code" name="address" required><br><br> -->
-                            <label for="years"><b>
-                                    <h8>Years of Experinece</h8>
-                                </b></label><br>
-                            <input type="text" placeholder="Years" name="years" required><br><br>
+                            <input type="text" placeholder="Last Name" name="name" id='lname' required><br><br>
                             <label for="phone"><b>
                                     <h8>Phone Number</h8>
                                 </b></label><br>
-                            <input type="text" placeholder= "Number" name="phone" required><br><br>
+                            <input type="number" placeholder= "Number" name="phone" id='pnumber' required><br><br>
                             <label for="email"><b>
                                     <h8>Email</h8>
                                 </b></label><br>
-                            <input type="text" placeholder="Email" name="email" id ="email" required><br><br>
-
+                            <input type="text" placeholder="Email" name="email" id ="email" required><br><br>   
                         </div>
                         <div class="social-media-icons">
                             <a href="http://www.facebook.com/" class="fa fa-facebook"></a>
@@ -61,18 +53,12 @@
                             <a href="https://ke.linkedin.com/" class="fa fa-linkedin"></a>
                             <a href="https://www.instagram.com/accounts/login/?hl=en" class="fa fa-instagram"></a>
                         </div>
-
+                        <input id='sign up' class='ghost-round full-width' onclick="validate()" name="" type="submit" value="sign up">
+                        <div class= 'message'><p>Invalid name and number</p></div>
                     </div>
                 </div>
-            </div>
-        </div>
-        <div class="textarea">
-            <label>Qualifications</label><br>
-            <textarea rows="5" cols="55" placeholder="Stylist Qualifications"></textarea>
-        </div>
-        <input type="submit" value ="submit" id ="submit"/>
-    </div>   
+            </div>               
 </body>
 </center> 
 
-</html>
+</html> 
