--- a/dashboard.html
+++ b/dashboard.html
@@ -23,42 +23,59 @@
                 <div class="subtitle"><strong>Stylist Profile</strong></div>
                 <form class="input">
                     <div class="input-fields">
-                            <img src="images/stlist1.jpg" alt="stylist" style="width:100%">
-            <div novalidate>
-                <div class="row">
-                    <div class="col-md-6">
-                        <h3>Details</h3>
-                        <div class="col-md-12">
-                            <label for="names">
-                                <b>
-                                    <h8>First Name</h8>
-                                </b></label><br>
-                            <input type="text" placeholder="First Name" class="user_name" id='fname' required></input><br><br>
-                            <label for="text"><b>
-                                    <h8>Last Name</h8>
-                                </b></label><br>
-                            <input type="text" placeholder="Last Name" name="name" id='lname' required><br><br>
-                            <label for="phone"><b>
-                                    <h8>Phone Number</h8>
-                                </b></label><br>
-                            <input type="number" placeholder= "Number" name="phone" id='pnumber' required><br><br>
-                            <label for="email"><b>
-                                    <h8>Email</h8>
-                                </b></label><br>
-                            <input type="text" placeholder="Email" name="email" id ="email" required><br><br>   
+                        <img src="images/stlist1.jpg" alt="stylist" style="width:100%">
+                        <div novalidate>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <h3>Details</h3>
+                                    <div class="col-md-12">
+                                        <label for="names">
+                                            <b>
+                                                <h8>First Name</h8>
+                                            </b></label><br>
+                                        <input type="text" placeholder="First Name" class="user_name" id='fname'
+                                            required></input><br><br>
+                                        <label for="text"><b>
+                                                <h8>Last Name</h8>
+                                            </b></label><br>
+                                        <input type="text" placeholder="Last Name" name="name" id='lname'
+                                            required><br><br>
+                                        <label for="phone"><b>
+                                                <h8>Phone Number</h8>
+                                            </b></label><br>
+                                        <input type="number" placeholder="Number" name="phone" id='pnumber'
+                                            required><br><br>
+                                        <label for="email"><b>
+                                                <h8>Email</h8>
+                                            </b></label><br>
+                                        <input type="text" placeholder="Email" name="email" id="email" required><br><br>
+                                    </div>
+                                    <div class="social-media-icons">
+                                        <a href="http://www.facebook.com/" class="fa fa-facebook"></a>
+                                        <a href="https://twitter.com/login?lang=en" class="fa fa-twitter"></a>
+                                        <a href="https://ke.linkedin.com/" class="fa fa-linkedin"></a>
+                                        <a href="https://www.instagram.com/accounts/login/?hl=en"
+                                            class="fa fa-instagram"></a>
+                                    </div>
+                                    <!-- <input id='sign up' class='ghost-round full-width' onclick="validate()" name=""
+                                        type="submit" value="submit"> -->
+                                    <div class='message'>
+                                        <p>Invalid name and number</p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="social-media-icons">
-                            <a href="http://www.facebook.com/" class="fa fa-facebook"></a>
-                            <a href="https://twitter.com/login?lang=en" class="fa fa-twitter"></a>
-                            <a href="https://ke.linkedin.com/" class="fa fa-linkedin"></a>
-                            <a href="https://www.instagram.com/accounts/login/?hl=en" class="fa fa-instagram"></a>
-                        </div>
-                        <input id='sign up' class='ghost-round full-width' onclick="validate()" name="" type="submit" value="sign up">
-                        <div class= 'message'><p>Invalid name and number</p></div>
                     </div>
+                </form>
                 </div>
-            </div>               
+                <div class ="column">
+                        <label for="qualifications"><b>
+                                <h8>Qualifications</h8>
+                            </b></label><br>
+                    <textarea placeholder="Text Here" row="10" cols="55"></textarea>
+                </div>
+                </div>
 </body>
-</center> 
+</center>
 
-</html> 
+</html>
