Added submit button to my work

--- a/dashboard.html
+++ b/dashboard.html
@@ -51,14 +51,14 @@
                                         <input type="text" placeholder="Email" name="email" id="email" required><br><br>
                                     </div>
                                     <div class="social-media-icons">
-                                        <a href="http://www.facebook.com/" class="fa fa-facebook"></a>
-                                        <a href="https://twitter.com/login?lang=en" class="fa fa-twitter"></a>
+                                    <a href="http://www.facebook.com/" class="fa fa-facebook"></a>
+                                    <a href="https://twitter.com/login?lang=en" class="fa fa-twitter"></a>
                                         <a href="https://ke.linkedin.com/" class="fa fa-linkedin"></a>
                                         <a href="https://www.instagram.com/accounts/login/?hl=en"
                                             class="fa fa-instagram"></a>
                                     </div>
-                                    <!-- <input id='sign up' class='ghost-round full-width' onclick="validate()" name=""
-                                        type="submit" value="submit"> -->
+                                    <input id='sign up' class='ghost-round full-width' onclick="validate()" name=""
+                                        type="submit" value="submit">
                                     <div class='message'>
                                         <p>Invalid name and number</p>
                                     </div>
