add logo image in index.html

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
     <div class="container">
         <div class="logotop">
+            <img src="/images/logo.png">
             <center>
             <h1>Mapambo</h1>
             </center>
