--- a/dashboard.html
+++ b/dashboard.html
@@ -23,7 +23,7 @@
                 <div class="subtitle"><strong>Stylist Profile</strong></div>
                 <form class="input">
                     <div class="input-fields">
-                        <img src="images/stlist1.jpg" alt="stylist" style="width:100%">
+                        <img src="images/mystyle.jpg" alt="stylist" style="width:100%">
                         <div novalidate>
                             <div class="row">
                                 <div class="col-md-6">
@@ -33,22 +33,22 @@
                                             <b>
                                                 <h8>First Name</h8>
                                             </b></label><br>
-                                        <input type="text" placeholder="First Name" class="user_name" id='fname'
+                                        <input type="text" placeholder="First Name" class="user_name" id='fname' value="Wangari"
                                             required></input><br><br>
                                         <label for="text"><b>
                                                 <h8>Last Name</h8>
                                             </b></label><br>
-                                        <input type="text" placeholder="Last Name" name="name" id='lname'
+                                        <input type="text" placeholder="Last Name" name="name" id='lname' value="Mwangi"
                                             required><br><br>
                                         <label for="phone"><b>
                                                 <h8>Phone Number</h8>
                                             </b></label><br>
-                                        <input type="number" placeholder="Number" name="phone" id='pnumber'
+                                        <input type="number" placeholder="Number" name="phone" id='pnumber' value ="0756897657"
                                             required><br><br>
                                         <label for="email"><b>
                                                 <h8>Email</h8>
                                             </b></label><br>
-                                        <input type="text" placeholder="Email" name="email" id="email" required><br><br>
+                                        <input type="text" placeholder="Email" name="email" id="email" value="mystyle@gmail.com"required><br><br>
                                     </div>
                                     <div class="social-media-icons">
                                         <a href="http://www.facebook.com/" class="fa fa-facebook"></a>
@@ -57,11 +57,12 @@
                                         <a href="https://www.instagram.com/accounts/login/?hl=en"
                                             class="fa fa-instagram"></a>
                                     </div>
-                                    <input id='sign up' class='ghost-round full-width' onclick="validate()" name=""
-                                        type="submit" value="submit">
-                                    <div class='message'>
+                                    <!-- <input id='sign up' class='ghost-round full-width' onclick="validate()" name=""
+                                        type="submit" value="submit"> -->
+                                        <button><a href ="index.html">Submit</a></button>
+                                    <!-- <div class='message'>
                                         <p>Invalid name and number</p>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
@@ -72,7 +73,11 @@
                 <label for="qualifications"><b>
                         <h8>Qualifications</h8>
                     </b></label><br>
-                <textarea placeholder="Text Here" row="10" cols="55"></textarea>
+                <textarea placeholder="Text Here" row="17" cols="55">
+                <!-- Associate's degree with cosmetology.
+                Communication and listening skills,marketing and sales ability,adaptability -->
+                Expert in manicure,pedicure and massage
+                </textarea>
             </div>
         </div>
 </body>
