Edited the text area size

--- a/dashboard.html
+++ b/dashboard.html
@@ -74,8 +74,8 @@
                         <h8>Qualifications</h8>
                     </b></label><br>
                 <textarea placeholder="Text Here" row="17" cols="55">
-                <!-- Associate's degree with cosmetology.
-                Communication and listening skills,marketing and sales ability,adaptability -->
+                Associate's degree with cosmetology.
+                Communication and listening skills,marketing and sales ability,adaptability
                 Expert in manicure,pedicure and massage
                 </textarea>
             </div>
