Indentation and spacing

--- a/dashboard.html
+++ b/dashboard.html
@@ -33,8 +33,8 @@
                                             <b>
                                                 <h8>First Name</h8>
                                             </b></label><br>
-                                        <input type="text" placeholder="First Name" class="user_name" id='fname' value="Wangari"
-                                            required></input><br><br>
+                                        <input type="text" placeholder="First Name" class="user_name" id='fname'
+                                            value="Wangari" required></input><br><br>
                                         <label for="text"><b>
                                                 <h8>Last Name</h8>
                                             </b></label><br>
@@ -43,12 +43,13 @@
                                         <label for="phone"><b>
                                                 <h8>Phone Number</h8>
                                             </b></label><br>
-                                        <input type="number" placeholder="Number" name="phone" id='pnumber' value ="0756897657"
-                                            required><br><br>
+                                        <input type="number" placeholder="Number" name="phone" id='pnumber'
+                                            value="0756897657" required><br><br>
                                         <label for="email"><b>
                                                 <h8>Email</h8>
                                             </b></label><br>
-                                        <input type="text" placeholder="Email" name="email" id="email" value="mystyle@gmail.com"required><br><br>
+                                        <input type="text" placeholder="Email" name="email" id="email"
+                                            value="mystyle@gmail.com" required><br><br>
                                     </div>
                                     <div class="social-media-icons">
                                         <a href="http://www.facebook.com/" class="fa fa-facebook"></a>
@@ -59,7 +60,7 @@
                                     </div>
                                     <!-- <input id='sign up' class='ghost-round full-width' onclick="validate()" name=""
                                         type="submit" value="submit"> -->
-                                        <button><a href ="index.html">Submit</a></button>
+                                    <button><a href="index.html">Submit</a></button>
                                     <!-- <div class='message'>
                                         <p>Invalid name and number</p>
                                     </div> -->
